add: find out more button

--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,10 @@ a:hover {
   padding: 0 5px;
 }
 
+.css-r8u8y9 {
+  padding: 0px !important;
+}
+
 /* #main-container {
   max-width: auto;
 } */
