--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,11 @@ text-align {
   z-index: -1;
 }
 
+.carousel-root {
+  margin-top: -91px;
+  z-index: -1;
+}
+
 #greyscale-img {
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
