--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,46 @@
+@font-face {
+  font-family: "FontLight";
+  src: url("./Fonts/Anakotmai-Light.ttf") format("truetype");
+  font-style: light;
+}
+
+@font-face {
+  font-family: "MyFont";
+  src: url("./Fonts/Anakotmai-Medium.ttf") format("truetype");
+  font-style: medium;
+}
+
+@font-face {
+  font-family: "MyFont";
+  src: url("./Fonts/Anakotmai-Bold.ttf") format("truetype");
+  font-style: bold;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+.p-6 {
+  padding: 4rem !important;
+}
+
+.pt-5 {
+  padding-top: 3rem !important;
+}
+
+.pt-6 {
+  padding-top: 4rem !important;
+}
+
+.g-6 {
+  --mdb-gutter-x: 4.5rem !important;
+}
+
 @media (min-width: 376px) {
   #tools-flex {
     flex-direction: column;
@@ -101,14 +144,19 @@ text-align {
   height: 60px;
 }
 
+/* Carousel  */
 #carousel-nav {
-  margin-top: -91px;
+  margin-top: -66px;
   z-index: -1;
 }
 
 .carousel-root {
   margin-top: -91px;
   z-index: -1;
+}
+
+.control-dots {
+  top: 88%;
 }
 
 #greyscale-img {
@@ -195,7 +243,7 @@ a:hover {
 .card-img,
 .card-img-top,
 .card-img-bottom {
-  width: -webkit-fit-content !important;
+  /* width: -webkit-fit-content !important; */
 }
 
 #image-container {
