--- a/src/index copy.css
+++ b/src/index copy.css
@@ -101,7 +101,7 @@ text-align {
 }
 
 #footer-bg {
-  background-color: #1e1e1e;
+  /* background-color: #1e1e1e; */
 }
 
 .css-18sg6k4-MuiPaper-root-MuiDrawer-paper {
