--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+  src: url("http://fonts.googleapis.com/css2?family=Roboto&display=swap");
 }
 
 body {
