--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ body {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 760px) {
   #tools-flex {
     flex-direction: row;
   }
@@ -309,8 +309,8 @@ a:hover {
   transform: translate(-0%, 20%);
   background: transparent;
   height: 60px;
-  border-radius: 40px;
-  padding: 10px;
+  /* border-radius: 40px; */
+  padding: 15px;
   /* transition: 0.4s; */
 }
 
@@ -320,8 +320,8 @@ a:hover {
 }
 
 .searchBox:hover > .searchInput {
-  width: 300px;
-  padding-left: 1rem;
+  width: 220px;
+  padding-left: 2rem;
 }
 
 .searchBox:hover > .searchButton {
@@ -428,14 +428,14 @@ a:hover {
   padding: 2rem 3rem 2rem 3rem !important;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 760px) {
   .flex-mobile-column {
     flex-direction: column;
     align-items: flex-start;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 760px) {
   .hide-on-mobile {
     display: none;
   }
@@ -447,6 +447,11 @@ a:hover {
 
 #contact-gutter {
   --mdb-gutter-x: "0rem !important";
+}
+
+.year {
+  color: #555; /* Optional: Adjust the color to differentiate the year */
+  font-weight: bold; /* Optional: Adjust the font weight if needed */
 }
 
 @tailwind components;
